add a separate model for update transactions
unlike creating transactions, they require a transaction id
