# ynab-api/src/models/mod.rs
@@ -152,6 +152,14 @@ mod transactions_response;
 pub use self::transactions_response::TransactionsResponse;
 mod transactions_response_data;
 pub use self::transactions_response_data::TransactionsResponseData;
+mod update_transaction;
+pub use self::update_transaction::UpdateTransaction;
+mod update_transaction_wrapper;
+pub use self::update_transaction_wrapper::UpdateTransactionWrapper;
+mod update_transactions_response;
+pub use self::update_transactions_response::UpdateTransactionsResponse;
+mod update_transactions_wrapper;
+pub use self::update_transactions_wrapper::UpdateTransactionsWrapper;
 mod user;
 pub use self::user::User;
 mod user_response;
